--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="../Portfolio/assets/css/style.css">
+    <title>Hello, world!</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h1 class="row">Portfolio</h1>
+                    <br>
+                    <div class="row">
+                        <div class="media">
+                            <img src="https://via.placeholder.com/150" class="align-self-start mr-3" alt="...">
+                            <div class="media-body">
+                              <!-- <h5 class="mt-0">Top-aligned media</h5> -->
+                              <p>
+                                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sint perferendis maxime molestiae eum ea, perspiciatis sunt, obcaecati dignissimos, dolores magni iste doloremque omnis quaerat natus! Ipsam enim placeat quibusdam.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sint perferendis maxime molestiae eum ea, perspiciatis sunt, obcaecati dignissimos, dolores magni iste doloremque omnis quaerat natus! Ipsam enim placeat quibusdam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sint perferendis maxime molestiae eum ea, perspiciatis sunt, obcaecati dignissimos, dolores magni iste doloremque omnis quaerat natus! Ipsam enim placeat quibusdam.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sint perferendis maxime molestiae eum ea, perspiciatis sunt, obcaecati dignissimos, dolores magni iste doloremque omnis quaerat natus! Ipsam enim placeat quibusdam.
+                              </p>
+                            </div>
+                          </div>   
+                    </div>
+
+                </div>
+                <div class="col-md-3">
+                    <div class="card bg-light mb-3" style="max-width: 18rem;">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                          <h5 class="card-title">Light card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                      </div>
+
+                </div>
+            </div>
+        </div>
+        
+    </main>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </body>
 </html>
