updated nav bar on Contatct.html and portfolio.html

--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
         </div>
     </nav>
     <main>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-9">
+                <div class="col-md-4">
                     <h1 class="row">About Me</h1>
-                    <br>
                     <div class="row">
                         <div class="media">
                             <img src="https://via.placeholder.com/150" class="align-self-start mr-3" alt="...">
@@ -47,16 +46,46 @@
                             </div>
                           </div>   
                     </div>
-
-                </div>
-                <div class="col-md-3">
-                    <div class="card bg-light mb-3" style="max-width: 18rem;">
-                        <div class="card-header">Header</div>
+                  </div>
+                <div class="col-md-8">
+                  <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Light card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                       </div>
+                    </div>
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This is a short card.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
                 </div>
             </div>
