added main grid with cars and sub grids

--- a/index.html
+++ b/index.html
@@ -31,27 +31,110 @@
         </div>
     </nav>
     <main>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-4">
-                    <h1 class="row">About Me</h1>
-                    <div class="row">
-                        <div class="media">
-                            <img src="https://via.placeholder.com/150" class="align-self-start mr-3" alt="...">
-                            <div class="media-body">
-                              <!-- <h5 class="mt-0">Top-aligned media</h5> -->
-                              <p>
-                                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sint perferendis maxime molestiae eum ea, perspiciatis sunt, obcaecati dignissimos, dolores magni iste doloremque omnis quaerat natus! Ipsam enim placeat quibusdam.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sint perferendis maxime molestiae eum ea, perspiciatis sunt, obcaecati dignissimos, dolores magni iste doloremque omnis quaerat natus! Ipsam enim placeat quibusdam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sint perferendis maxime molestiae eum ea, perspiciatis sunt, obcaecati dignissimos, dolores magni iste doloremque omnis quaerat natus! Ipsam enim placeat quibusdam.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sint perferendis maxime molestiae eum ea, perspiciatis sunt, obcaecati dignissimos, dolores magni iste doloremque omnis quaerat natus! Ipsam enim placeat quibusdam.
-                              </p>
-                            </div>
-                          </div>   
+      <div class="container-md">
+        <div class="row">
+            <div class="col-md-6">
+                <h1 class="row">About Me</h1>
+                <div class="row">
+                    <div class="media">
+                        <img src="https://via.placeholder.com/150" class="align-self-start mr-3" alt="...">
+                        <div class="media-body">
+                          <!-- <h5 class="mt-0">Top-aligned media</h5> -->
+                          <p>
+                              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sint perferendis maxime molestiae eum ea, 
+                              perspiciatis sunt, obcaecati dignissimos, dolores magni iste doloremque omnis quaerat natus! Ipsam enim placeat 
+                              quibusdam.Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                          </p>
+                        </div>
+                    </div>   
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card text-center">
+                    <div class="card-header">
+                      Featured
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title">Special title treatment</h5>
+                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                      2 days ago
                     </div>
                   </div>
-                <div class="col-md-8">
-                  <div class="row row-cols-1 row-cols-md-3">
+            </div>
+            <div class="col-md-3">
+                <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Header</div>
+                    <div class="card-body">
+                        <form>
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text" id="inputGroup-sizing-default">First Name</span>
+                                </div>
+                                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                            </div>
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text" id="inputGroup-sizing-default">Last Name</span>
+                                </div>
+                                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Email address</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                            </div> 
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Example textarea</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div> 
+                              <input class="btn btn-primary" type="submit" value="Submit">  
+                        </form>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                 <!-- other links and pic titles -->
+                <div class="row">
+                    <div class="media">
+                        <img src="https://via.placeholder.com/150" class="align-self-center mr-3" alt="...">
+                        <div class="media-body">
+                          <h5 class="mt-0">Center-aligned media</h5>
+                          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                          <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="row">
+                    <div class="media">
+                        <img src="https://via.placeholder.com/150" class="align-self-center mr-3" alt="...">
+                        <div class="media-body">
+                          <h5 class="mt-0">Center-aligned media</h5>
+                          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                          <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="row">
+                    <div class="media">
+                        <img src="https://via.placeholder.com/150" class="align-self-center mr-3" alt="...">
+                        <div class="media-body">
+                          <h5 class="mt-0">Center-aligned media</h5>
+                          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                          <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                        </div>
+                      </div>
+                </div>
+               
+            </div>
+            <div class="col-md-6">
+                <div class="row row-cols-1 row-cols-md-3">
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -60,7 +143,7 @@
                     </div>
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">This is a short card.</p>
@@ -69,7 +152,7 @@
                     </div>
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -78,7 +161,25 @@
                     </div>
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -86,11 +187,9 @@
                       </div>
                     </div>
                   </div>
-
-                </div>
             </div>
-        </div>
-        
+        </div>   
+    </div>  
     </main>
 
     <!-- Optional JavaScript -->
