added resized bio pic to assets and linked in about me on index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1 class="row">About Me</h1>
                 <div class="row">
                     <div class="media">
-                        <img src="https://via.placeholder.com/150" class="align-self-start mr-3" alt="...">
+                        <img src="../Portfolio/assets/imgs/Bio pic 200x200.jpg" class="align-self-start mr-3" alt="...">
                         <div class="media-body">
                           <!-- <h5 class="mt-0">Top-aligned media</h5> -->
                           <p>
