--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
       <div class="container-md">
         <div class="row">
             <div class="col-md-6">
-                <h1 class="row">About Me</h1>
+                <h1 class="row">Michael A. Willingham</h1>
                 <div class="row">
                     <div class="media">
                         <img src="../Portfolio/assets/imgs/Bio pic 200x200.jpg" class="align-self-start mr-3" alt="...">
                         <div class="media-body">
-                          <!-- <h5 class="mt-0">Top-aligned media</h5> -->
+                          <h5 class="mt-0">About Me</h5>
                           <p>
-                              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sint perferendis maxime molestiae eum ea, 
-                              perspiciatis sunt, obcaecati dignissimos, dolores magni iste doloremque omnis quaerat natus! Ipsam enim placeat 
-                              quibusdam.Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                              I have worked in the live entertainment production industry for the past 12 years.
+                              I started out as a stage hand and worked my way up to production manger at several venues.
+                              although i have enjoyed being a prouction mager my main passion has always been lighting.
+                              for the past 11 years i have held the position of lighting director at a local large venue,
+                              and for the past 6 years have held both the PM and LD positions. 
                           </p>
                         </div>
                     </div>   
@@ -55,7 +57,7 @@
                       Featured
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
+                      <h5 class="card-title">Quote of the day</h5>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
