--- a/index.html
+++ b/index.html
@@ -57,18 +57,19 @@
                       Featured
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">Quote of the day</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">Funny Quote Of the Day</h5>
+                      <p class="card-text">Cats are intended to teach us that not everything in nature has a function.</p>
+                      <p class="card-text">-Garrison Keillor.</p>
+                      <a href="https://www.brainyquote.com/quote_of_the_day" class="btn btn-primary">More Quotes</a>
                     </div>
                     <div class="card-footer text-muted">
-                      2 days ago
+                      <!-- 2 days ago -->
                     </div>
                   </div>
             </div>
             <div class="col-md-3">
                 <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-                    <div class="card-header">Header</div>
+                    <div class="card-header">Leave a Meessage!</div>
                     <div class="card-body">
                         <form>
                             <div class="input-group mb-3">
@@ -88,7 +89,7 @@
                                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                             </div> 
                             <div class="form-group">
-                                <label for="exampleFormControlTextarea1">Example textarea</label>
+                                <label for="exampleFormControlTextarea1">Message</label>
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div> 
                               <input class="btn btn-primary" type="submit" value="Submit">  
