added resized imgs for lower left cards and linked to cards

--- a/index.html
+++ b/index.html
@@ -103,29 +103,20 @@
                  <!-- other links and pic titles -->
                 <div class="row">
                     <div class="media">
-                        <img src="https://via.placeholder.com/150" class="align-self-center mr-3" alt="...">
+                        <img src="../Portfolio/assets/imgs/design 200.jpg" class="align-self-center mr-3" alt="...">
                         <div class="media-body">
-                          <h5 class="mt-0">Center-aligned media</h5>
+                          <h5 class="mt-0">Design</h5>
                           <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
                           <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
                         </div>
                       </div>
                 </div>
+                <br>
                 <div class="row">
                     <div class="media">
-                        <img src="https://via.placeholder.com/150" class="align-self-center mr-3" alt="...">
+                        <img src="../Portfolio/assets/imgs/indoor show 200x200.jpg" class="align-self-center mr-3" alt="...">
                         <div class="media-body">
-                          <h5 class="mt-0">Center-aligned media</h5>
-                          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                          <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-                        </div>
-                      </div>
-                </div>
-                <div class="row">
-                    <div class="media">
-                        <img src="https://via.placeholder.com/150" class="align-self-center mr-3" alt="...">
-                        <div class="media-body">
-                          <h5 class="mt-0">Center-aligned media</h5>
+                          <h5 class="mt-0">Live</h5>
                           <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
                           <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
                         </div>
