added jumbotron to left card col section for project quick view

--- a/index.html
+++ b/index.html
@@ -124,7 +124,14 @@
                 </div>
                
             </div>
+            <!-- left card section for projects -->
             <div class="col-md-6">
+              <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Current Projects!</h1>
+                  <p class="lead">Check out Portfolio for full datails</p>
+                </div>
+              </div>
                 <div class="row row-cols-1 row-cols-md-3">
                     <div class="col mb-4">
                       <div class="card h-100">
