--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="../Portfolio/assets/css/style.css">
-    <title>Hello, world!</title>
+    <title>About Me</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -132,7 +132,7 @@
                   <p class="lead">Check out Portfolio for full datails</p>
                 </div>
               </div>
-                <div class="row row-cols-1 row-cols-md-3">
+                <div class="row">
                     <div class="col mb-4">
                       <div class="card h-100">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
@@ -151,6 +151,8 @@
                         </div>
                       </div>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col mb-4">
                       <div class="card h-100">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
@@ -169,28 +171,11 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col mb-4">
-                      <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col mb-4">
-                      <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                </div>
+              </div>
             </div>
         </div>   
-    </div>  
+      </div>  
     </main>
 
     <!-- Optional JavaScript -->
