updated botom left placeholder cards text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </nav>
     <main>
-      <div class="container-md">
+      <div class="container-sm">
         <div class="row">
             <div class="col-md-6">
                 <h1 class="row">Michael A. Willingham</h1>
@@ -137,8 +137,8 @@
                       <div class="card h-100">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <h5 class="card-title">Project 1</h5>
+                          <p class="card-text">Project info</p>
                         </div>
                       </div>
                     </div>
@@ -146,8 +146,8 @@
                       <div class="card h-100">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This is a short card.</p>
+                          <h5 class="card-title">Project 2</h5>
+                          <p class="card-text">Project info</p>
                         </div>
                       </div>
                     </div>
@@ -157,8 +157,8 @@
                       <div class="card h-100">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                          <h5 class="card-title">Project 3</h5>
+                          <p class="card-text">Project info</p>
                         </div>
                       </div>
                     </div>
@@ -166,8 +166,8 @@
                       <div class="card h-100">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <h5 class="card-title">Project 4</h5>
+                          <p class="card-text">Project info</p>
                         </div>
                       </div>
                     </div>
