--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Portfolio/assets/css/style.css">
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="../Portfolio/assets/imgs/css/style.css">
+    <title>Portfolio</title>
   </head>
   <body>
     <header>
@@ -41,25 +41,25 @@
         <main>
           <section class="row">
             <div class="col-md-4">
-              <img src="https://via.placeholder.com/300" alt="">
+              <a href="../Portfolio/assets/imgs/17_27_10.jpg" target="blank"><img src="../Portfolio/assets/imgs/17_27_10.jpg" class="img-fluid"  alt="Concert Lighting pre-viz1"></a>
             </div>
             <div class="col-md-4">
-              <img src="https://via.placeholder.com/300" alt="">
+              <a href="../Portfolio/assets/imgs/16_28_40.jpg" target="blank"><img src="../Portfolio/assets/imgs/16_28_40.jpg" class="img-fluid" alt="Concert Lighting pre-viz2"></a>
             </div>
             <div class="col-md-4">
-              <img src="https://via.placeholder.com/300" alt="">
+              <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="blank"><img src="../Portfolio/assets/imgs/16_10_45.jpg" class="img-fluid" alt="Concert Lighting pre-viz3"></a>
             </div>
           </section>
           <br>
           <section class="row">
             <div class="col-md-4">
-              <img src="https://via.placeholder.com/300" alt="">
+              <a href="../Portfolio/assets/imgs/16_08_41.jpg" target="blank"><img src="../Portfolio/assets/imgs/16_08_41.jpg" class="img-fluid" alt="Concert Lighting pre-viz4"></a>
             </div>
             <div class="col-md-4">
-              <img src="https://via.placeholder.com/300" alt="">
+              <a href="../Portfolio/assets/imgs/16_08_16.jpg" target="blank"><img src="../Portfolio/assets/imgs/16_08_16.jpg" class="img-fluid" alt="Concert Lighting pre-viz5"></a>
             </div>
             <div class="col-md-4">
-              <img src="https://via.placeholder.com/300" alt="">
+              <a href="../Portfolio/assets/imgs/16_08_52.jpg" target="blank"><img src="../Portfolio/assets/imgs/16_08_52.jpg" class="img-fluid" alt="Concert Lighting pre-viz6"></a>
             </div>
           </section>
           <br>
