--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
         </div>
     </nav>
     <main>
-      <div class="container-sm">
+      <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
                 <h1 class="row">Michael A. Willingham</h1>
-                <div class="row">
+                <!-- rowbgc class -->
+                <div class="row rowbgc">
                     <div class="media">
                         <img src="../Portfolio/assets/imgs/Bio pic 200x200.jpg" class="align-self-start mr-3" alt="...">
                         <div class="media-body">
@@ -43,7 +44,7 @@
                           <p>
                               I have worked in the live entertainment production industry for the past 12 years.
                               I started out as a stage hand and worked my way up to production manger at several venues.
-                              although i have enjoyed being a prouction mager my main passion has always been lighting.
+                              although I have enjoyed being a prouction mager my main passion has always been lighting.
                               for the past 11 years i have held the position of lighting director at a local large venue,
                               and for the past 6 years have held both the PM and LD positions. 
                           </p>
@@ -53,24 +54,28 @@
             </div>
             <div class="col-md-3">
                 <div class="card text-center">
-                    <div class="card-header">
+                    <div class="card-header rowbgc">
                       Featured
                     </div>
-                    <div class="card-body">
+                    <!-- rowbgc class -->
+                    <div class="card-body rowbgc">
                       <h5 class="card-title">Funny Quote Of the Day</h5>
                       <p class="card-text">Cats are intended to teach us that not everything in nature has a function.</p>
                       <p class="card-text">-Garrison Keillor.</p>
                       <a href="https://www.brainyquote.com/quote_of_the_day" class="btn btn-primary">More Quotes</a>
                     </div>
-                    <div class="card-footer text-muted">
+                    <!-- rowbgc class -->
+                    <div class="card-footer text-muted rowbgc">
                       <!-- 2 days ago -->
                     </div>
                   </div>
             </div>
             <div class="col-md-3">
                 <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-                    <div class="card-header">Leave a Meessage!</div>
-                    <div class="card-body">
+                  <!-- rowbgc class -->  
+                  <div class="card-header rowbgc">Leave a Meessage!</div>
+                  <!-- rowbgc class -->  
+                  <div class="card-body rowbgc">
                         <form>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
@@ -101,7 +106,8 @@
         <div class="row">
             <div class="col-md-6">
                  <!-- other links and pic titles -->
-                <div class="row">
+                 <!-- rowbgc class -->
+                <div class="row rowbgc">
                     <div class="media">
                         <img src="../Portfolio/assets/imgs/design 200.jpg" class="align-self-center mr-3" alt="...">
                         <div class="media-body">
@@ -112,7 +118,8 @@
                       </div>
                 </div>
                 <br>
-                <div class="row">
+                <!-- rowbgc class -->
+                <div class="row rowbgc">
                     <div class="media">
                         <img src="../Portfolio/assets/imgs/indoor show 200x200.jpg" class="align-self-center mr-3" alt="...">
                         <div class="media-body">
@@ -126,7 +133,8 @@
             </div>
             <!-- left card section for projects -->
             <div class="col-md-6">
-              <div class="jumbotron jumbotron-fluid">
+              <!-- rowbgc class -->
+              <div class="jumbotron jumbotron-fluid rowbgc">
                 <div class="container">
                   <h1 class="display-4">Current Projects!</h1>
                   <p class="lead">Check out Portfolio for full datails</p>
@@ -136,7 +144,8 @@
                     <div class="col mb-4">
                       <div class="card h-100">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <!-- rowbgc class -->
+                        <div class="card-body rowbgc">
                           <h5 class="card-title">Project 1</h5>
                           <p class="card-text">Project info</p>
                         </div>
@@ -145,7 +154,8 @@
                     <div class="col mb-4">
                       <div class="card h-100">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <!-- rowbgc class -->
+                        <div class="card-body rowbgc">
                           <h5 class="card-title">Project 2</h5>
                           <p class="card-text">Project info</p>
                         </div>
@@ -156,7 +166,8 @@
                     <div class="col mb-4">
                       <div class="card h-100">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <!-- rowbgc class -->
+                        <div class="card-body rowbgc">
                           <h5 class="card-title">Project 3</h5>
                           <p class="card-text">Project info</p>
                         </div>
@@ -165,7 +176,8 @@
                     <div class="col mb-4">
                       <div class="card h-100">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <!-- rowbgc class -->
+                        <div class="card-body rowbgc">
                           <h5 class="card-title">Project 4</h5>
                           <p class="card-text">Project info</p>
                         </div>
