added social links row and added links

--- a/index.html
+++ b/index.html
@@ -107,6 +107,31 @@
             <div class="col-md-6">
                  <!-- other links and pic titles -->
                  <!-- rowbgc class -->
+                 <div class="row rowbgc">
+                  <div class="media">
+                      <img src="../Portfolio/assets/imgs/social logos.png" class="align-self-center mr-3" alt="...">
+                      <div class="media-body">
+                        <h5 class="mt-0">My Links</h5>
+                        <ul class="nav flex-column">
+                          <li class="nav-item">
+                            <a class="nav-link active" href="https://www.facebook.com/mwillingham" target="blank">Facebook</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" href="https://www.instagram.com/alexlights/" target="blank">Instagram</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" href="https://www.linkedin.com/in/michael-willingham-934a6295/" target="blank">LinkedIn</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" href="https://malex19889.github.io/" target="blank">Github</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+              </div>
+              <br>
+                 <!-- other links and pic titles -->
+                 <!-- rowbgc class -->
                 <div class="row rowbgc">
                     <div class="media">
                         <img src="../Portfolio/assets/imgs/design 200.jpg" class="align-self-center mr-3" alt="...">
