added link in jumbotron to portfolio

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <div class="jumbotron jumbotron-fluid rowbgc">
                 <div class="container">
                   <h1 class="display-4">Current Projects!</h1>
-                  <p class="lead">Check out Portfolio for full datails</p>
+                  <p class="lead">Check out <a href="../Portfolio/portfolio.html">Portfolio</a> for full datails</p>
                 </div>
               </div>
                 <div class="row">
