added updated a class in  style and set color to slate, set bold and italic

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <!-- css reset -->
+    <link rel="stylesheet" href="../Portfolio/assets/imgs/css/reset.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="../Portfolio/assets/imgs/css/style.css">
@@ -129,9 +130,9 @@
                 <div class="row">
                   <contact>
                     <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-                    <!-- rowbgc class -->  
-                    <div class="card-header rowbgc">Leave a Meessage!</div>
-                    <!-- rowbgc class -->  
+                      <!-- rowbgc class -->  
+                      <div class="card-header rowbgc">Leave a Meessage!</div>
+                      <!-- rowbgc class -->  
                       <div class="card-body rowbgc">
                             <form>
                                 <div class="input-group mb-3">
@@ -157,10 +158,9 @@
                                   <input class="btn btn-primary" type="submit" value="Submit">  
                             </form>
                       </div>
-                  </div>
+                    </div>
                   </contact>
                 </div>
-               
             </div>
             <!-- left card section for projects -->
             <div class="col-md-6">
@@ -168,7 +168,7 @@
               <div class="jumbotron jumbotron-fluid rowbgc">
                 <div class="container">
                   <h1 class="display-4">Current Projects!</h1>
-                  <p class="lead">Check out <a href="../Portfolio/portfolio.html">Portfolio</a> for full datails</p>
+                  <p class="lead">Check out <a href="../Portfolio/portfolio.html" >Portfolio</a> for full datails</p>
                 </div>
               </div>
                 <div class="row">
@@ -217,7 +217,8 @@
                 </div>
               </div>
             </div>
-        </div>   
+        </div>
+
       </div>  
     </main>
     
